--- a/frontend/newpage.html
+++ b/frontend/newpage.html
@@ -11,7 +11,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="./index.css">
-    <link rel="stylesheet" href="./register.css">
+    <link rel="stylesheet" href="./newpage.css">
   </head>
   <body>
     <!-- NAVBAR -->
@@ -558,61 +558,36 @@
         >
       </div>
     </div>
-<!-- REGISTER FORM -->
-<div id="mid-reg-cont">
-    <div id="reg-form-div">
-        <form id="reg-form">
-            <div id="container">
-                <h2>Create A New Account</h2>
-              <div id="div-show-msg"></div>
-                <p id="login_email"></p>
-        
-                <label>FirstName<span style="color: red">*</span></label>
-                <input type="text" id="fname" required />
-                <label>LastName<span style="color: red">*</span></label>
-                <input type="text" id="lname" required />
-                <label for="email">Email<span style="color: red">*</span></label>
-                <input type="email" id="email" required />
-                <label for="location">Location</label><input type="text" id="loc">
-                <label for="mobile">Mobile</label><input type="text" id="mob">
-                <label>Create password<span style="color: red">*</span></label>
-                <input type="password" id="password" autocomplete="off" required />
-                <label>ReEnter password<span style="color: red">*</span></label>
-                <input type="password" id="repassword" autocomplete="off" required />
-                <div id="div2">
-                  <p>
-                    By creating an account, you agree to our
-                    <a href="#">Privacy Policy</a>and
-                    <a href="#">Terms & Conditions</a>.
-                  </p>
-                </div>
-        
-                <button id="signup-btn">Create Account</button>
-              </div>
-        </form>
+
+    <div id="new-page-topsec">
+      <img src="../pro-images/n_firsimg.png" alt="">
+      <div id="temp-new">
+        <button id="new-women-btn">SHOP WOMEN</button>
+        <button id="new-men-btn">SHOP MEN</button>
+      </div>
     </div>
-    <div id="img-reg">
-        <img src="https://www.eddiebauer.com/static/signup-right-image.png" alt="">
-        <div id="reg-img-cont">
-            <div id="img-tp">
-                <img src="../pro-images/project_logo.png" alt="">
-            </div>
-            <div>
-                <h1>Adventure Rewards</h1>
-                <h3>One Account Gets You Everything</h3>
-                <p>Adventure Rewards, Exclusive Offers and More!</p>
-                <li>Earn points on every purchase</li>
-                <li>Quarterly Certificates</li>
-                <li>Free Shipping Benefits</li>
-                <li>Early access to new products & promotions</li>
-                <li>Birthday Gift</li>
-                <li>Receipts & Easy Returns</li>
-            </div>
-        </div>
-    </div>
+<div id="new-middle-row">
+  <p id="new-first-middle-line">SHOP NEW WINTER ARRIVALS</p>
+  <p id="new-second-middle-line">Get the essentials you need to get outside and explore this season.
+  </p>
+
 </div>
 
-    <!-- FOOTER -->
+<div id="new-middle-sections">
+  <div class="nm-sec-row">
+    <a href=""><img src="../pro-images/n_rfirimg.png" alt=""></a>
+  </div>
+  <div class="nm-sec-row">
+    <a href=""><img src="../pro-images/n_rsecimg.png" alt=""></a>
+  </div>
+  <div class="nm-sec-row">
+    <a href=""><img src="../pro-images/n_rthirimg.png" alt=""></a>
+  </div>
+  <div class="nm-sec-row">
+    <a href=""><img src="../pro-images/n_rfourimg.png" alt=""></a>
+  </div>
+</div>
+<!-- Footer -->
     <div id="com-footer">
         <div id="fir-foo-div">
           <div class="store-locator">
@@ -728,5 +703,6 @@
       }
     }
     </script>
-    <script src="./register.js"></script>
+    <script src="./newpage.js"></script>
   </html>
+  
