--- a/frontend/index.html
+++ b/frontend/index.html
@@ -72,7 +72,7 @@
   
       <div class="topnav" id="myTopnav">
         <div class="downdrop" >
-          <button class="btndrop">
+          <button class="btndrop" id="newbtn-navbar">
             NEW!
             <i class="fa fa-caret-down"></i>
           </button>
