--- a/frontend/product.html
+++ b/frontend/product.html
@@ -63,10 +63,10 @@
               </div>
             </div>
           </div>
-          <a href=""
-            ><img src="../pro-images//bag-logo.jpg" alt="" id="bag-sec"
+          <a href="./bag.html"
+            class="gotobagsec"><img src="../pro-images//bag-logo.jpg" alt="" id="bag-sec"
           /></a>
-          <a href="" id="bag-sec">bag</a>
+          <a href="./bag.html" id="bag-sec" class="gotobagsec">bag</a>
         </div>
       </div>
   
