--- a/frontend/admin-edit-page.html
+++ b/frontend/admin-edit-page.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="../pro-images/project_logo.png">
-    <meta name="msapplication-TileColor" content="#ffc40d">
-    <meta name="theme-color" content="#ffffff">
+    <link rel="icon" type="image/png" sizes="16x16" href="../pro-images/project_logo.png">
+  
     <title>Adventure Apha/Admin</title>
     <link rel="stylesheet" href="./admin-home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -14,9 +13,9 @@
 <body id="bdy_edit_pge" >
     <div class="topnav" id="myTopnav">
         
-        <a href="./admin_page.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
+        <a href="./admin-home.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
         
-        <a href="./admin_page.html" class="content">Administrative</a>
+        <a href="./admin-home.html" class="content">Administrative</a>
         <a href="#news" class="content">Term of Use</a>
         <a href="./index.html" class="content">Visit Our Website</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
@@ -72,6 +71,6 @@
         </div>
         </form>
     </div>
-    <script src="./admin_edit_page.js"></script>
 </body>
+<script src="./admin_edit_page.js"></script>
 </html>
