--- a/frontend/index.html
+++ b/frontend/index.html
@@ -91,7 +91,7 @@
               <div class="last-div">
                 <h3>Shop by category</h3>
                 <a href="#">Women</a>
-                <a href="#">Men</a>
+                <a href="./menspage.html">Men</a>
                 <a href="#">Outwear</a>
                 <a href="#">Footwear</a>
                 <a href="#">Kids</a>
