--- a/frontend/admin-home.html
+++ b/frontend/admin-home.html
@@ -11,7 +11,7 @@
 <body>
     <div class="topnav" id="myTopnav">
         
-        <a href="./admin_page.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
+        <a href="./admin-home.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
         
         <a href="#admin" class="content">Administrative</a>
         <a href="#TermOfUse" class="content">Term of Use</a>
