--- a/frontend/menspage.html
+++ b/frontend/menspage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../pro-images/project_logo.png">
     <title>AA/Register from</title>
     <link rel="stylesheet" href="./nav_and_footer.css" />
     <link
