--- a/frontend/admin-edit-page.html
+++ b/frontend/admin-edit-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="../pro-images/project_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./pro-images/project_logo.png">
   
     <title>Adventure Apha/Admin</title>
     <link rel="stylesheet" href="./admin-home.css">
@@ -13,7 +13,7 @@
 <body id="bdy_edit_pge" >
     <div class="topnav" id="myTopnav">
         
-        <a href="./admin-home.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
+        <a href="./admin-home.html" class="active"><img src="./pro-images/project_logo.png" alt=""></a>
         
         <a href="./admin-home.html" class="content">Administrative</a>
         <a href="#news" class="content">Term of Use</a>
