--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../pro-images/project_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./pro-images/project_logo.png">
     <title>Advneture Alpha</title>
     <link rel="stylesheet" href="./nav_and_footer.css" />
     <link
@@ -26,7 +26,7 @@
         <!-- </div> -->
         <div id="dashboardlogo">
           <a href="./index.html"
-            ><img width="100%" src="../pro-images/project_logo.png" alt="logo"
+            ><img width="100%" src="./pro-images/project_logo.png" alt="logo"
           /></a>
         </div>
         <div id="bag-logo">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <a href="./bag.html"
-            class="gotobagsec"><img src="../pro-images//bag-logo.jpg" alt="" id="bag-sec"
+            class="gotobagsec"><img src="./pro-images//bag-logo.jpg" alt="" id="bag-sec"
           /></a>
           <a href="./bag.html" id="bag-sec" class="gotobagsec">bag</a>
         </div>
@@ -563,7 +563,7 @@
     <!-- MID SECTION -->
     <div class="offer-div-sec">
       <a href="">
-        <img src="../pro-images/home_upImg.png" alt="">
+        <img src="./pro-images/home_upImg.png" alt="">
       </a>
     </div>
     <div id="MidSec">
@@ -579,14 +579,14 @@
         </div>
         <div class="sec-sec-div">
           <a href="">
-            <img src="../pro-images/sec-homeImg.jpg" alt="">
+            <img src="./pro-images/sec-homeImg.jpg" alt="">
           </a>
         </div>
       </div>
       <div class="thir-div-sec">
         <div class="thir-sec-div" id="thir-shoes-img">
           <a href="">
-            <img src="../pro-images/third-home-Img.jpg" alt="" >
+            <img src="./pro-images/third-home-Img.jpg" alt="" >
           </a>
         </div>
         <div class="thir-fir-div">
@@ -603,7 +603,7 @@
     </div>
     <div id="SecMidSec">
       <div class="for-div-sec">
-        <img src="../pro-images/fourth-home-img.png" alt="" style="width:100%;">
+        <img src="./pro-images/fourth-home-img.png" alt="" style="width:100%;">
         <div class="centered-btn-div">
          <button>SHOP WOMENS</button>
          <button>SHOP MENS</button>
@@ -618,19 +618,19 @@
      </div>
      <div id="aah">
       <div class="ataahf">
-      <img src="../pro-images/american-forests.png" alt="">
+      <img src="./pro-images/american-forests.png" alt="">
       <h3>American Forests</h3>
       <p>Thanks to you we're making a difference! We’ve partnered with American Forests for over 25 years, and your generous support has helped plant over 8 million trees across the US and Canada.</p>
       <a href=""><h3>LEARN MORE</h3></a>
       </div>
       <div class="ataahf">
-        <img src="../pro-images/abuabo.png" alt="">
+        <img src="./pro-images/abuabo.png" alt="">
         <h3>Abundance Abounds!</h3>
         <p>Lettuce show you a few of the Eddie Bauer products @redleafranch loves to wears while working in his Tennessee vegetable garden, where his currant harvest is almost beyond be-leaf. #JustOutsideYourDoor</p>
         <a href=""><h3>LEARN MORE</h3></a>
         </div>
         <div class="ataahf">
-          <img src="../pro-images/highfive.png" alt="">
+          <img src="./pro-images/highfive.png" alt="">
           <h3>High Fives Foundation</h3>
           <p>Founded by Roy Tuscany in 2009, The High Fives Foundation is a non-profit organization that serves athletes living with life-altering injuries, such as spinal cord or traumatic brain injury.</p>
           <a href=""><h3>LEARN MORE</h3></a>
@@ -684,21 +684,21 @@
      <div class="wrapper">
       <i id="left">&#10094;</i>
       <div class="carousel">
-        <img src="../adventure-img/sec.png" alt="img" draggable="false">
-        <img src="../adventure-img/thir.png" alt="img" draggable="false">
-        <img src="../adventure-img/four.png" alt="img" draggable="false">
-        <img src="../adventure-img/sixt.png" alt="img" draggable="false">
-        <img src="../adventure-img/eigth.png" alt="img" draggable="false">
-        <img src="../adventure-img/nine.png" alt="img" draggable="false">
-        <img src="../adventure-img/ten.png" alt="img" draggable="false">
-        <img src="../adventure-img/ele.png" alt="img" draggable="false">
-        <img src="../adventure-img/twe.png" alt="img" draggable="false">
-        <img src="../adventure-img/thirt.png" alt="img" draggable="false">
-        <img src="../adventure-img/fourth.png" alt="img" draggable="false">
-        <img src="../adventure-img/fift.png" alt="img" draggable="false">
-        <img src="../adventure-img/fifth.png" alt="img" draggable="false">
-        <img src="../adventure-img/sixth.png" alt="img" draggable="false">
-        <img src="../adventure-img/ninet.png" alt="img" draggable="false">
+        <img src="./adventure-img/sec.png" alt="img" draggable="false">
+        <img src="./adventure-img/thir.png" alt="img" draggable="false">
+        <img src="./adventure-img/four.png" alt="img" draggable="false">
+        <img src="./adventure-img/sixt.png" alt="img" draggable="false">
+        <img src="./adventure-img/eigth.png" alt="img" draggable="false">
+        <img src="./adventure-img/nine.png" alt="img" draggable="false">
+        <img src="./adventure-img/ten.png" alt="img" draggable="false">
+        <img src="./adventure-img/ele.png" alt="img" draggable="false">
+        <img src="./adventure-img/twe.png" alt="img" draggable="false">
+        <img src="./adventure-img/thirt.png" alt="img" draggable="false">
+        <img src="./adventure-img/fourth.png" alt="img" draggable="false">
+        <img src="./adventure-img/fift.png" alt="img" draggable="false">
+        <img src="./adventure-img/fifth.png" alt="img" draggable="false">
+        <img src="./adventure-img/sixth.png" alt="img" draggable="false">
+        <img src="./adventure-img/ninet.png" alt="img" draggable="false">
       </div>
       <i id="right">&#10095;</i>
     </div>
@@ -709,7 +709,7 @@
       <div id="fir-foo-div">
         <div class="store-locator">
           <div class="img-sl">
-            <img src="../adventure-img/location.png" alt="">
+            <img src="./adventure-img/location.png" alt="">
           </div>
           <div class="store-info">
             <h3>STORE LOCATER</h3>
@@ -718,7 +718,7 @@
         </div>
         <div class="store-locator">
           <div class="img-sl">
-            <img src="../adventure-img/rewards.png" alt="">
+            <img src="./adventure-img/rewards.png" alt="">
           </div>
           <div class="store-info">
             <h3>ADVENTURE REWARDS</h3>
@@ -727,7 +727,7 @@
         </div>
         <div class="store-locator">
           <div class="img-sl">
-            <img src="../adventure-img/vision.png" alt="">
+            <img src="./adventure-img/vision.png" alt="">
           </div>
           <div class="store-info">
             <h3>VISION STATEMENT</h3>
@@ -797,7 +797,7 @@
             <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/383px-Flag_of_India.svg.png" alt="" id="logo-flag1">
           </div>
           <div class="logo-flag">
-            <img src="../pro-images/project_logo.png" alt="" id="logo-flag2">
+            <img src="./pro-images/project_logo.png" alt="" id="logo-flag2">
           </div>
         </div>
         <div class="copy-three-div">
