--- a/frontend/shipment_page.html
+++ b/frontend/shipment_page.html
@@ -30,7 +30,7 @@
         <!-- </div> -->
         <div id="dashboardlogo">
           <a href="./index.html"
-            ><img width="100%" src="../pro-images/project_logo.png" alt="logo"
+            ><img width="100%" src="./pro-images/project_logo.png" alt="logo"
           /></a>
         </div>
         <div id="bag-logo">
@@ -69,7 +69,7 @@
             </div>
           </div>
           <a href="./bag.html"
-            class="gotobagsec"><img src="../pro-images//bag-logo.jpg" alt="" id="bag-sec"
+            class="gotobagsec"><img src="./pro-images//bag-logo.jpg" alt="" id="bag-sec"
           /></a>
           <a href="./bag.html" id="bag-sec" class="gotobagsec">bag</a>
         </div>
@@ -639,7 +639,7 @@
         <div id="fir-foo-div">
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/location.png" alt="">
+              <img src="./adventure-img/location.png" alt="">
             </div>
             <div class="store-info">
               <h3>STORE LOCATER</h3>
@@ -648,7 +648,7 @@
           </div>
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/rewards.png" alt="">
+              <img src="./adventure-img/rewards.png" alt="">
             </div>
             <div class="store-info">
               <h3>ADVENTURE REWARDS</h3>
@@ -657,7 +657,7 @@
           </div>
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/vision.png" alt="">
+              <img src="./adventure-img/vision.png" alt="">
             </div>
             <div class="store-info">
               <h3>VISION STATEMENT</h3>
@@ -727,7 +727,7 @@
               <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/383px-Flag_of_India.svg.png" alt="" id="logo-flag1">
             </div>
             <div class="logo-flag">
-              <img src="../pro-images/project_logo.png" alt="" id="logo-flag2">
+              <img src="./pro-images/project_logo.png" alt="" id="logo-flag2">
             </div>
           </div>
           <div class="copy-three-div">
