--- a/frontend/admin-home.html
+++ b/frontend/admin-home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="16x16" href="./pro-images/project_logo.png">
     <title>Adventure Apha/Admin</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./admin-home.css">
@@ -11,7 +12,7 @@
 <body>
     <div class="topnav" id="myTopnav">
         
-        <a href="./admin-home.html" class="active"><img src="../pro-images/project_logo.png" alt=""></a>
+        <a href="./admin-home.html" class="active"><img src="./pro-images/project_logo.png" alt=""></a>
         
         <a href="#admin" class="content">Administrative</a>
         <a href="#TermOfUse" class="content">Term of Use</a>
