--- a/frontend/menspage.html
+++ b/frontend/menspage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" sizes="16x16" href="../pro-images/project_logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./pro-images/project_logo.png">
     <title>AA/Register from</title>
     <link rel="stylesheet" href="./nav_and_footer.css" />
     <link
@@ -26,7 +26,7 @@
         <!-- </div> -->
         <div id="dashboardlogo">
           <a href="./index.html"
-            ><img width="100%" src="../pro-images/project_logo.png" alt="logo"
+            ><img width="100%" src="./pro-images/project_logo.png" alt="logo"
           /></a>
         </div>
         <div id="bag-logo">
@@ -65,7 +65,7 @@
             </div>
           </div>
           <a href="./bag.html"
-             class="gotobagsec"><img src="../pro-images//bag-logo.jpg" alt="" id="bag-sec"
+             class="gotobagsec"><img src="./pro-images//bag-logo.jpg" alt="" id="bag-sec"
           /></a>
           <a href="./bag.html" id="bag-sec" class="gotobagsec">bag</a>
         </div>
@@ -674,7 +674,7 @@
       </div>
   <!-- renderdata here -->
       <div id="mens-data-render">
-        <img src="../pro-images/data-load.gif" alt="" id="data-load-img">
+        <img src="./pro-images/data-load.gif" alt="" id="data-load-img">
       </div>
      </div>
      <div id="pagination-wrapper">
@@ -692,7 +692,7 @@
         <div id="fir-foo-div">
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/location.png" alt="">
+              <img src="./adventure-img/location.png" alt="">
             </div>
             <div class="store-info">
               <h3>STORE LOCATER</h3>
@@ -701,7 +701,7 @@
           </div>
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/rewards.png" alt="">
+              <img src="./adventure-img/rewards.png" alt="">
             </div>
             <div class="store-info">
               <h3>ADVENTURE REWARDS</h3>
@@ -710,7 +710,7 @@
           </div>
           <div class="store-locator">
             <div class="img-sl">
-              <img src="../adventure-img/vision.png" alt="">
+              <img src="./adventure-img/vision.png" alt="">
             </div>
             <div class="store-info">
               <h3>VISION STATEMENT</h3>
@@ -780,7 +780,7 @@
               <img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/383px-Flag_of_India.svg.png" alt="" id="logo-flag1">
             </div>
             <div class="logo-flag">
-              <img src="../pro-images/project_logo.png" alt="" id="logo-flag2">
+              <img src="./pro-images/project_logo.png" alt="" id="logo-flag2">
             </div>
           </div>
           <div class="copy-three-div">
